# movement-control

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
hcr2013/: .hgignore  setup.py
hcr2013/.hg/: dirstate  hgrc  undo.desc  undo.dirstate
hcr2013/.hg/cache/: branchheads  tags
hcr2013/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
hcr2013/.hg/store/data/: setup.py.i  ~2ehgignore.i
hcr2013/.hg/store/data/documents/: _intro_to_r_o_s.pdf.d  _intro_to_r_o_s.pdf.i  _r_o_s__intro__prezi.pdf.i  _r_o_s_navigation.pdf.d  _r_o_s_navigation.pdf.i  _tutorial2.pdf.d  _tutorial2.pdf.i
hcr2013/exercises/navigation_tutorial/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
hcr2013/exercises/navigation_tutorial/devel/include/exercise1/: JoyAxis.h
hcr2013/exercises/navigation_tutorial/devel/include/exercise2/: JoyAxis.h
hcr2013/exercises/navigation_tutorial/devel/include/exercise3/: JoyAxis.h
hcr2013/exercises/navigation_tutorial/devel/lib/pkgconfig/: exercise1.pc  exercise2.pc  exercise3.pc
hcr2013/exercises/navigation_tutorial/src/common/: CMakeLists.txt  package.xml
hcr2013/exercises/navigation_tutorial/src/common/src/common/: __init__.py
hcr2013/exercises/navigation_tutorial/src/exercise1/: CMakeLists.txt
hcr2013/exercises/navigation_tutorial/src/exercise1/launch/: joystick_controller.launch  p3at.launch
hcr2013/exercises/navigation_tutorial/src/exercise1/scripts/: joystick_node.py  joystick_to_cmd_vel.py
hcr2013/exercises/navigation_tutorial/src/exercise2/: CMakeLists.txt  package.xml
hcr2013/exercises/navigation_tutorial/src/exercise2/launch/: teleop_sim.launch
hcr2013/exercises/navigation_tutorial/src/exercise2/scripts/: joystick_node.py  joystick_to_cmd_vel.py
hcr2013/exercises/navigation_tutorial/src/exercise3/: CMakeLists.txt  package.xml
hcr2013/exercises/navigation_tutorial/src/exercise3/launch/: joystick_controller.launch  laser_hokuyo.launch  laser_sick.launch  localize.launch  mapper.launch  p3at.launch
hcr2013/exercises/navigation_tutorial/src/exercise3/scripts/: joystick_to_cmd_vel.py
hcr2013/exercises/navigation_tutorial/src/exercise3/world/: my_map.pgm  my_map.yaml
hcr2013/exercises/part2/devel/: .catkin  .rosinstall  setup.sh
hcr2013/exercises/part2/devel/lib/pkgconfig/: step1.pc  step2.pc  step3.pc  xtion_follower.pc
hcr2013/exercises/part2/devel/lib/step1/: step1
hcr2013/exercises/part2/devel/lib/step2/: step2
hcr2013/exercises/part2/devel/lib/step3/: flies_generator  step3
hcr2013/exercises/part2/devel/lib/xtion_follower/: tf_broadcaster  xtion_follower
hcr2013/exercises/part2/src/step1/src/: Main.cpp  Main.cpp~
hcr2013/exercises/part2/src/step2/: CMakeLists.txt
hcr2013/exercises/part2/src/step2/src/: Main.cpp
hcr2013/exercises/part2/src/step3/: CMakeLists.txt
hcr2013/exercises/part2/src/step3/src/: Main.cpp
hcr2013/exercises/part2/src/xtion_follower/launch/: xtion_follower.launch  xtion_follower.launch~
hcr2013/exercises/part2/src/xtion_follower/world/: simple_map.world
hcr2013/exercises/ros_intro/devel/: .catkin  .rosinstall  setup.sh
hcr2013/exercises/ros_intro/devel/include/exercise3/: JoyAxis.h
hcr2013/exercises/ros_intro/devel/include/exercise4/: JoyAxis.h
hcr2013/exercises/ros_intro/devel/include/exercise6/: JoyAxis.h
hcr2013/exercises/ros_intro/devel/include/exercise7/: JoyAxis.h
hcr2013/exercises/ros_intro/devel/include/exercise8/: JoyAxis.h
hcr2013/exercises/ros_intro/devel/lib/pkgconfig/: exercise2.pc  exercise3.pc  exercise4.pc  exercise5.pc  exercise6.pc  exercise7.pc  exercise8.pc
hcr2013/exercises/ros_intro/src/common/: setup.py
hcr2013/exercises/ros_intro/src/exercise2/: CMakeLists.txt
hcr2013/exercises/ros_intro/src/exercise2/scripts/: joystick_node.py
hcr2013/exercises/ros_intro/src/exercise3/: CMakeLists.txt  package.xml
hcr2013/exercises/ros_intro/src/exercise3/scripts/: joystick_node.py
hcr2013/exercises/ros_intro/src/exercise4/: CMakeLists.txt  package.xml
hcr2013/exercises/ros_intro/src/exercise4/scripts/: joystick_node.py
hcr2013/exercises/ros_intro/src/exercise5/: CMakeLists.txt  package.xml
hcr2013/exercises/ros_intro/src/exercise5/launch/: exercise5.launch  exercise5.launch~
hcr2013/exercises/ros_intro/src/exercise6/: CMakeLists.txt  package.xml
hcr2013/exercises/ros_intro/src/exercise6/scripts/: joystick_node.py  joystick_to_cmd_vel.py
hcr2013/exercises/ros_intro/src/exercise6/world/: simple_map.world
hcr2013/exercises/ros_intro/src/exercise7/: CMakeLists.txt  package.xml
hcr2013/exercises/ros_intro/src/exercise7/launch/: exercise7.launch  (+4 more)
hcr2013/exercises/ros_intro/src/exercise8/: CMakeLists.txt
hcr2013/solutions/part2/src/step1/: CMakeLists.txt  package.xml
hcr2013/solutions/part2/src/step1/launch/: tf.launch
hcr2013/solutions/part2/src/step1/src/: Main.cpp
hcr2013/solutions/part2/src/step3/: package.xml
hcr2013/solutions/part2/src/step3/launch/: tf.launch
hcr2013/solutions/part2/src/step3/src/: Main.cpp
hcr2013/solutions/part2/src/step3/src/other_code/: FliesGenerator.cpp
hcr2013/solutions/part2/src/xtion_follower/: CMakeLists.txt  package.xml
hcr2013/solutions/part2/src/xtion_follower/launch/: xtion_follower.launch
hcr2013/solutions/part2/src/xtion_follower/scripts/: obstacle_map.py  shared_control.py  sonar_to_pointcloud.py
hcr2013/solutions/part2/src/xtion_follower/src/tf_broadcaster/: Main.cpp
hcr2013/solutions/part2/src/xtion_follower/src/xtion_follower/: Main.cpp
launch/: controlwithjoystick.launch  filter.launch  joystick.launch  joystick.launch~  main.launch  main.launch~  movement.launch  movement.launch~  p3at.launch  runall.launch  test.launch  xtion.launch
msg/: Stop.msg
scripts/: joystick_node.py~  joystick_to_cmd_vel.py  joystick_to_cmd_vel.py~  movement.py  movement_alt.py  movement_client.py  movement_filter.py  movement_server.py  movement_server.py~  robot_control.py  rospy  sonar.py  sonar_control.py  transform.py
scripts/joystick/: joystick.py  joystick_node.py  joystick_to_cmd_vel.py
src/: Main.cpp  transform.cpp
srv/: movement.srv
(+255 files in other folders)
