<?xml version="1.0"?>
<package>
  <name>common</name>
  <version>0.0.0</version>
  <description>Support library for ros_intro</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="the0s@todo.todo">the0s</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-pygame</build_depend>

  <run_depend>python-pygame</run_depend>

</package>
